--- a/frontend/src/pages/ListaSolicitacoes/ListaSolicitacoesMobile/SolicitacaoInfoMobile/SolicStatusAvaliacao/SolicStatusAvaliacao.module.scss
+++ b/frontend/src/pages/ListaSolicitacoes/ListaSolicitacoesMobile/SolicitacaoInfoMobile/SolicStatusAvaliacao/SolicStatusAvaliacao.module.scss
@@ -28,3 +28,7 @@
   margin-top: 8px;
   color: $cinza-400;
 }
+
+.dropdown-container {
+  margin-top: 8px;
+}
